--- a/public/css/style.css
+++ b/public/css/style.css
@@ -86,6 +86,8 @@ a:hover{
   margin: 0;
   padding: 20px;
   border-bottom: 1px solid #eaeaea;
+  display: flex;
+  justify-content: space-between;
 }
 
  .portfolio-breadcrumb a{
