--- a/views/index.pug
+++ b/views/index.pug
@@ -5,23 +5,19 @@ block content
     div
 
       //- Add a title or heading like My Portfolio, or Hey, Potential Employers, or Let's make the web great together! 
-      h1 Heading
+      h1 Quentin's Treehouse Portfolio
 
       //- Add a description for your portfolio, what this project is, it's purpose, what it's supposed to accomplish, etc. 
       p.lead.text-light
-        | Portfolio Description
+        | Hello, there! &#128075;
+        | <br/>
+        | My name is Quentin, and this is my Treehouse Portfolio site. You can see my 'real' portfolio at #[a(href="https://qstaley.com" target="blank") Q Staley Dot Com], but that project is slow-roasting on the back-burner while I complete my #[a(href="https://teamtreehouse.com/techdegree" target="blank") Team Treehouse JavaScript Techdegree]. The following showcase includes 6 of the 10 techdegree projects (with this website counting as the sixth). The projects were designed by Treehouse, while the JavaScript powering them is all mine&mdash;with the help of my techdegree peers who've reviewed my code. The purpose is to prove, practice, and grow my Web Development skills, and of course, to make a mess of fun along the way. I hope you enjoy, and forever thank you for visiting &#128513;
   article.grid-container.portfolio-index
     
     .grid-x.grid-margin-x.small-up-2.medium-up-2.large-up-3
-
-      //- Use the Pug `each` iterator to create a project img, title and link in the markup for each of the projects you are showcasing.  
-      
-      //- Use a combination of interpolation and template literals as needed to dynamically generate the the routes in the href, as well as the img's src and the projects title.
-      
-      //- Here's what the Pug for each project example should look like. 
-
-      .cell
-        a(href='#')
-          img.thumbnail(src='https://placehold.it/550x550')
-          h5 Title
+        each project in projectData
+            .cell
+                a(href=`/project/${project.id}`)
+                    img.thumbnail(src=`${project.image_urls[0]}`)
+                    h5 Project-#{project.id} #{project.project_name}
       
