--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,18 +14,18 @@ html(class="no-js" lang="en" dir="ltr")
         block sidebar
           br
           .cell.shrink
-            img.thumbnail(src='https://placehold.it/550x350')
+            img.thumbnail(src='/static/imgs/profile.jpg')
           .cell.auto
 
             //- Add your name here.
-            h5 Name
+            h5 Quentin Staley
 
             //- Add text here to describe who you are, what you do, and why you are so awesome.
             p.text-light
-              | Description
+              | He was born a philosopher, though he went to school for design. In his freetime he writes poetry, though his best lines are stuck in iMessage threads. <br/><br/>His coding is a means to an end: to create wonderful ideas and applications, and to not let ability inhibit the plan. Of course, even this end is just another means to a different end: to enjoy the passing of time, and to learn life. <br/><br/>View Quentin's three skills via the link below &#128071;
 
             //- Add about page route to the href below. 
-            a(href='') Learn More →
+            a(href='/about') Quentin's 3 Skills →
 
     .off-canvas-content(data-off-canvas-content='')
       .title-bar.hide-for-large
