--- a/views/project.pug
+++ b/views/project.pug
@@ -2,32 +2,36 @@ extends layout.pug
 
 block content 
   nav.grid-container.portfolio-breadcrumb
-    a(href='/') ← Back
+    a(href='/') ← Back Home
+    a(href=`/project/${data.next}`) Next: Project #{data.next} →
   article.grid-container.portfolio-intro.portfolio-project
     .grid-x
       .cell.small-6.medium-9.large-9
 
         //- Use interpolation to dynamically add the project title.
-        h1 Title
+        h1 #{data.project_name}
 
         //- Use interpolation to dynamically add the project description.
         p.lead.text-light
-          | Description
+          | !{data.description}
 
       .cell.portfolio-meta.small-6.medium-2.large-3
         h6 Technologies
 
         //- Use an `each` iterator to replace the li tags below and interpolation to dynamically add the technologies used in each project.
         ul
-          li HTML
-          li CSS
-          li JavaScript
+          each item in data.technologies
+            li #{item}
 
         //- Use template literals and interpolation to add URLs to the hrefs below so they link to the repo and the live version of each project.
-        a.button.expanded(href='') Live Demo
-        a.button.expanded(href='') GitHub Repo
+        a.button.expanded(href=`${data.live_link}`, target='blank') Live Demo
+        a.button.expanded(href=`${data.github_link}`, target='blank') GitHub Repo
     
     //- Replace the URLs in the src attributes below with template literals and interpolation to dynamically add three project images.  You only have to add one image.  But adding more images to show your app in different states demonstrates a level of thoroughness and professionalism that potential employers will like to see. 
-    img.image(src='https://placehold.it/1200x550')
-    img.image(src='https://placehold.it/1200x550')
-    img.image(src='https://placehold.it/1200x550')
+    - var imgIndex = 0
+    each img in data.image_urls[1]
+        img.image(src=`${img}`)
+        | <p>!{data.banner_captions[imgIndex++]}</p>
+        
+
+    
