--- a/views/about.pug
+++ b/views/about.pug
@@ -2,46 +2,37 @@ extends layout.pug
 
 block content 
   nav.grid-container.portfolio-breadcrumb
-    a(href='/') ← Back
+    a(href='/') ← Back Home
   article.grid-container.portfolio-intro.portfolio-project
     .grid-x
       .cell.small-6.medium-9.large-9
 
-        //- Add your name.
-        h1 Name
+        h1 Quentin Staley
 
-        //- Feel free personalize the title below
         p.lead.text-light
           | Full Stack JavaScript Developer.
 
         //- Replace the boilerplate below with your Elevator pitch below.
         .portfolio-bio
           p
-            | This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position. 
-            | This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position.
-            | This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position.
+            | Hello, again &#128075; Thanks for reading till here. The abbreviated tale of my life is this: I was raised to be a tennis player, which had me chasing half-day schools and flexible curriculums so I could spend more time training. By college, I did play on a college team, but at the cost of having little patience for traditional classrooms. So I went to art school: the Savannah College of Art Design (SCAD). And while craft schools like SCAD teach technical skills from day one without bloated lessons, the curriculum ultimately fails to teach application&mdash;stopping once the project looks pretty and well before the idea is engineered into an actual product. <br/><br/> So here I am, four years later, having studied Photography, Graphic Design, Motion Graphics, Art History, Advertising, and Creative Writing. Here I am, alas, where I always wished to be at the engineering level. May my prototypes not die pretty, but may they live without compromise in a breathing body of code.   
       .cell.portfolio-meta.small-6.medium-2.large-3
         h6 Skills
 
         //- Replace the text in the li tags below with your own skills.  At this point, you should be able to list at least ten skills.
         ul
-          li Express
-          li Other cool stuff
-          li Listing my skills
-          li Etc.
-          li Etc. 
-          li Etc.
+          li Web Design: HTML, CSS/SASS
+          li Web Development: JavaScript
+          li Graphic Design: 2D, Iconography, Typography
+          li Writing: Published Poetry and Short Stories
+          li Software: Adobe CC Certified 
         h6 Contact Info
 
         //- Add your own contact info
         ul
-          li 555-555-1234
-          li email@email.com
+          li 470-588-0555
+          li ahumanday@gmail.com
 
-        //- Add URLs to the hrefs below to link to your social media accounts.
         a.button.expanded(href='') LinkedIn
-        a.button.expanded(href='') GitHub
-        a.button.expanded(href='') Twitter
-  nav.grid-container.portfolio-breadcrumb
-    a(href='/') ← Back
+        a.button.expanded(href='https://github.com/qstaley921') GitHub
   
