--- a/views/layout.pug
+++ b/views/layout.pug
@@ -17,22 +17,15 @@ html(class="no-js" lang="en" dir="ltr")
             img.thumbnail(src='/static/imgs/profile.jpg')
           .cell.auto
 
-            //- Add your name here.
             h5 Quentin Staley
-
-            //- Add text here to describe who you are, what you do, and why you are so awesome.
             p.text-light
-              | He was born a philosopher, though he went to school for design. In his freetime he writes poetry, though his best lines are stuck in iMessage threads. <br/><br/>His coding is a means to an end: to create wonderful ideas and applications, and to not let ability inhibit the plan. Of course, even this end is just another means to a different end: to enjoy the passing of time, and to learn life. <br/><br/>View Quentin's three skills via the link below &#128071;
-
-            //- Add about page route to the href below. 
-            a(href='/about') Quentin's 3 Skills →
+              | He was born a philosopher, though he went to school for design. In his freetime he writes poetry, though his best lines are stuck in iMessage threads. <br/><br/>His coding is a means to an end: to create wonderful ideas and applications, and to not let ability inhibit the plan. Of course, even this end is just another means to a different end: to enjoy the passing of time, and to learn life.
+            a(href='/about') More about Quentin →
 
     .off-canvas-content(data-off-canvas-content='')
       .title-bar.hide-for-large
         .title-bar-left
           button.menu-icon(type='button', data-toggle='my-info')
-
-          //- Add your name here.  This is for the mobile screen sized version.
           span.title-bar-title Name
       block content
         
