--- a/views/page-not-found.pug
+++ b/views/page-not-found.pug
@@ -2,10 +2,14 @@ extends layout.pug
 
 block content 
   nav.grid-container.portfolio-breadcrumb
-    a(href='/') ← Back
+    a(href='/') ← Back Home
   article.grid-container.portfolio-intro.portfolio-project
     .grid-x
       .cell.small-6.medium-9.large-9
 
         //- Use interpolation to dynamically add the project title.
         h1 This page was not found! Try going back #[a(href='/') ← Back]
+        p And in case you're into this sort of thing, the exacting error code is <span class="underline">#{error.status}</span>
+        .error-img  
+            img(src="/static/imgs/blackhole.gif" alt="black hole gif")
+            p <a href="https://giphy.com/xponentialdesign/" target="blank">Complements of Xponential Design</a>
