--- a/views/error.pug
+++ b/views/error.pug
@@ -2,7 +2,7 @@ extends layout.pug
 
 block content 
   nav.grid-container.portfolio-breadcrumb
-    a(href='/') ← Back
+    a(href='/') ← Back Home
   article.grid-container.portfolio-intro.portfolio-project
     .grid-x
       .cell.small-6.medium-9.large-9
@@ -10,4 +10,7 @@ block content
         //- Use interpolation to dynamically add the project title.
         h1 #{error.message}
         br
-        h2 The status code is not looking good: #{error.status}
+        p The status code is not looking good: <span class="underline">#{error.status}</span>&mdash;which means something is more generally awry.
+        .error-img  
+            img(src="/static/imgs/oops.gif", alt="cartoon face sticking its tongue out")
+            p <a href="https://giphy.com/sophiecorrigan/" target=>Complements of Sophie Corrigan</a>
