--- a/views/about.pug
+++ b/views/about.pug
@@ -9,8 +9,10 @@ block content
 
         h1 Quentin Staley
 
-        p.lead.text-light
+        p.lead.text-light.less-margin
           | Full Stack JavaScript Developer.
+
+        hr
 
         //- Replace the boilerplate below with your Elevator pitch below.
         .portfolio-bio
