--- a/views/layout.pug
+++ b/views/layout.pug
@@ -17,8 +17,8 @@ html(class="no-js" lang="en" dir="ltr")
             img.thumbnail(src='/static/imgs/profile.jpg')
           .cell.auto
 
-            h5 Quentin Staley
-            p.text-light
+            h5.layout Quentin Staley
+            p.text-light.justify
               | He was born a philosopher, though he went to school for design. In his freetime he writes poetry, though his best lines are stuck in iMessage threads. <br/><br/>His coding is a means to an end: to create wonderful ideas and applications, and to not let ability inhibit the plan. Of course, even this end is just another means to a different end: to enjoy the passing of time, and to learn life.
             a(href='/about') More about Quentin →
 
