--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,12 +9,21 @@ h1,h2,h3,h4,h5,p{
     color: #666;
   }
 
+h5.layout {
+    color: white;
+    margin-top: 5px;
+}  
 .thumb-name{
-    font-size: .75em;
+    font-size: 0.9rem;
+    margin-top: 5px;
 }   
 
+.justify {
+    text-align: justify;
+}
+
 .thumb-title{
-    font-size: .75em;
+    font-size: 0.9rem;
     color: black;
     font-weight: bold;
     -webkit-text-transform: uppercase;
@@ -22,6 +31,9 @@ h1,h2,h3,h4,h5,p{
 }
 
   
+.less-margin {
+    margin-bottom: 0;
+}
 
   h6{
     letter-spacing: 2.5px;
@@ -33,6 +45,17 @@ h1,h2,h3,h4,h5,p{
   p{
     font-size: 15px;
     color: #666;
+  }
+
+  .caption-text {
+      font-style: italic;
+      text-align: center;
+      font-size: 0.9em;
+      margin-bottom: 35px;
+      padding: 0 5%;
+      color: black;
+      font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+
   }
 
   .underline{
@@ -80,7 +103,7 @@ a:hover{
 .image{
   display: inline-block;
   margin-left: auto;
-  margin-bottom: 1rem;
+  margin-bottom: .6rem;
   border: solid 4px #fefefe;
   border-radius: 0;
   box-shadow: 0 0 0 1px rgba(10, 10, 10, 0.2);
@@ -158,19 +181,44 @@ a:hover{
   padding: 40px 50px 30px;
 }
 
-.portfolio-intro p{
-  border-bottom: 1px solid #eaeaea;
-  padding-bottom: 40px;
-}
 
 .portfolio-index{
   margin: 0;
-  padding: 10px 50px;
+  padding: 20px 50px;
 }
 
-  .portfolio-index .thumbnail{
-    margin-bottom: 5px;
-  }
+.thumbnail-container {
+    position: relative;
+    transition: all .15s ease-out;
+}
+
+.cell a:hover .tool-tip, .cell a:focus .tool-tip{
+    box-shadow: inset 0 0 250px rgba(0, 0, 0, 1);
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 3;
+}
+
+.cell a:hover .thumbnail-container, .cell a:focus .thumbnail-container {
+    transform: scale(0.98);
+}
+
+.thumbnail {
+    z-index: 2;
+}
+
+.tool-tip {
+    transition: all .25s ease-out;
+    z-index: -1;
+    color: white;
+    position: absolute;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    text-align: center;
+    padding-top: 42%;
+    font-style: italic;
+    text-transform: lowercase;
+}
 
   .portfolio-index a{
     color: #222;
